--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&display=swap" rel="stylesheet">
+
   <title>Charan & Bhargavi - Wedding Countdown</title>
   <style>
     body, html {
@@ -12,6 +14,15 @@
       font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
     }
+body {
+  font-family: 'Dancing Script', 'Great Vibes', cursive;
+  font-size: 1.2rem;
+}
+
+h1 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 3rem;
+}
 
     .background {
       position: fixed;
@@ -97,6 +108,9 @@
         font-size: 1.5rem;
       }
     }
+	#stopwatch {
+  font-family: 'Segoe UI', sans-serif;
+}
   </style>
 </head>
 <body>
