--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: url('togather.jpeg') no-repeat center center fixed;
+      background: url('togather.JPEG') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Dancing Script', 'Great Vibes', cursive;
       color: #fff;
